--- a/requirements/requirements_leader.txt
+++ b/requirements/requirements_leader.txt
@@ -1,6 +1,7 @@
 -r requirements.txt
 zeroconf==0.115.2
-flask==2.2.2
+flask==3.0.0
 flup6==1.1.1
 python-dotenv==1.0.0
 huey==2.5.0
+werkzeug==3.0.0
