--- a/config.dev.ini
+++ b/config.dev.ini
@@ -46,8 +46,8 @@ Kd=0.0
 
 
 [od_config.photodiode_channel]
-1=90
-2=REF
+1=REF
+2=90
 
 [od_config]
 # how many samples should the ADC publish per second?
@@ -85,8 +85,9 @@ pioreactor3=0
 
 [ui.overview.settings]
 filtered_od_lookback_minutes=240
-raw__od_lookback_minutes=240
+raw_od_lookback_minutes=240
 log_display_count=65
+time_display_mode=hours
 
 
 [dosing_automation]
@@ -119,10 +120,10 @@ send_od_statistics_to_Pioreactor=1
 
 
 [growth_rate_kalman]
-acc_std=0.025
-obs_std=0.03
-od_std=0.1
-rate_std=0.05
+acc_std=0.001
+obs_std=3.0
+od_std=0.005
+rate_std=0.20
 
 [motor_driver]
 initial_duty_cycle=10
