adding export/import scripts

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -51,7 +51,7 @@ Kd=0.0
 
 [od_config]
 # how many samples should the ADC publish per second?
-samples_per_second=0.2
+samples_per_second=0.12
 
 pd_reference_ema=0.4
 
@@ -61,7 +61,7 @@ ir_led_intensity=90
 use_calibration=1
 
 [storage]
-database=pioreactor.sqlite
+database=/Users/camerondavidson-pilon/code/pioreactorui/pioreactor.sqlite
 
 [logging]
 log_file=./pioreactor.log
