fix tests that were failing due to config.dev changes

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -20,9 +20,6 @@ D=
 duty_cycle=10
 
 
-[temperature_config.sampling]
-samples_per_second=0.1
-
 
 [bioreactor]
 # max_volume_ml is determined by the volume that just touches the outflow tube. I.e. if you
@@ -51,7 +48,7 @@ Kd=0.0
 
 [od_config]
 # how many samples should the ADC publish per second?
-samples_per_second=0.12
+samples_per_second=0.2
 
 pd_reference_ema=0.4
 
@@ -61,7 +58,7 @@ ir_led_intensity=90
 use_calibration=1
 
 [storage]
-database=/Users/camerondavidson-pilon/code/pioreactorui/pioreactor.sqlite
+database=pioreactor.sqlite
 
 [logging]
 log_file=./pioreactor.log
