--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -8,4 +8,4 @@ msgspec==0.18.4
 diskcache==5.6.3
 wheel==0.41.2
 crudini==0.9.5
-# lgpio; platform_machine!='armv7l' and platform_machine!='armv6l'
+lgpio; platform_machine!='armv7l' and platform_machine!='armv6l'
