--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,7 +65,7 @@ jobs:
           tag: ${{ github.event.release.tag_name }}
           overwrite: true
 
-  fetch-release:
+  fetch-pioreactorui-release:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
@@ -75,7 +75,7 @@ jobs:
       run: |
         LATEST_RELEASE=$(curl -s https://api.github.com/repos/pioreactor/pioreactorui/releases/latest)
         echo "RELEASE_UI_TAG=$(echo $LATEST_RELEASE | jq -r .tag_name)" >> $GITHUB_ENV
-        echo "RELEASE_UI_URL=$(echo $LATEST_RELEASE | jq -r .tarball_url)" >> $GITHUB_ENV
+        echo "RELEASE_UI_URL=https://github.com/pioreactor/pioreactorui/archive/refs/tags/${{ env.RELEASE_UI_TAG }}.tar.gz" >> $GITHUB_ENV
     - name: Download Release Tarball
       run: |
         curl -L $RELEASE_UI_URL -o pioreactorui_${{ env.RELEASE_UI_TAG }}.tar.gz
@@ -90,7 +90,7 @@ jobs:
   zip-asset-upload:
     name: 🤐 Zip assets and upload
     runs-on: ubuntu-latest
-    needs: [build, build-deps]
+    needs: [build, build-deps, fetch-pioreactorui-release]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
