--- a/config.dev.ini
+++ b/config.dev.ini
@@ -57,6 +57,9 @@ ir_led_intensity=90
 # use the most recent calibration file, if available
 use_calibration=1
 
+# apply a smoothing penalizer
+smoothing_penalizer=700.0
+
 [storage]
 database=pioreactor.sqlite
 
@@ -87,18 +90,11 @@ log_display_count=65
 time_display_mode=hours
 
 
-[dosing_automation]
-pause_between_subdoses_seconds=0.1
-
 [dosing_automation.pid_morbidostat]
 Kp=5
 Ki=0
 Kd=0
 
-[dosing_automation.pid_turbidostat]
-Kp=0.05
-Ki=0.01
-Kd=0.01
 
 [temperature_automation.thermostat]
 Kp=.01
@@ -122,6 +118,10 @@ obs_std=3.0
 od_std=0.005
 rate_std=0.20
 
-[motor_driver]
-initial_duty_cycle=10
-hz=20
+
+[dosing_automation.config]
+pause_between_subdoses_seconds=5
+waste_removal_multiplier=2
+max_volume_to_warn=17.0
+max_volume_to_stop=18.0
+max_subdose=0.75
