--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install
         run: |
-          apt-get install python3-lgpio
+          sudo apt-get install -y python3-lgpio
           pip install -e .
           pip install -r requirements/requirements_dev.txt
           pip install pyyaml
