--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,9 +20,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install
+      - name: Install python libraries
         run: |
-          sudo apt-get install -y python3-lgpio
+          wget https://github.com/Gadgetoid/PY_LGPIO/releases/download/0.2.2.0/lgpio-0.2.2.0.tar.gz -O lgpio-0.2.2.0.tar.gz
+          python -m pip install lgpio-0.2.2.0.tar.gz
           pip install -e .
           pip install -r requirements/requirements_dev.txt
           pip install pyyaml
