--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,13 +22,14 @@ jobs:
 
       - name: Install python libraries
         run: |
+          sudo apt-get install -y swig python-dev python3-dev
+          sudo apt-get install -y python-setuptools python3-setuptools
           wget https://github.com/Gadgetoid/PY_LGPIO/releases/download/0.2.2.0/lgpio-0.2.2.0.tar.gz -O lgpio-0.2.2.0.tar.gz
           pip install -e .
           pip install -r requirements/requirements_dev.txt
           pip install lgpio-0.2.2.0.tar.gz
           pip install pyyaml
           pip list
-          python -c "import lgpio"
 
       - name: Mosquitto MQTT Broker in GitHub Actions
         uses: Namoshek/mosquitto-github-action@v1
