--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,13 +22,15 @@ jobs:
 
       - name: Install python libraries
         run: |
-          sudo apt-get install -y swig python3-dev
-          sudo apt-get install -y python3-setuptools
-          wget https://github.com/Gadgetoid/PY_LGPIO/releases/download/0.2.2.0/lgpio-0.2.2.0.tar.gz -O lgpio-0.2.2.0.tar.gz
           pip install -e .
           pip install -r requirements/requirements_dev.txt
-          pip install lgpio-0.2.2.0.tar.gz
           pip install pyyaml
+
+          wget https://github.com/Gadgetoid/PY_LGPIO/releases/download/0.2.2.0/lgpio-0.2.2.0.tar.gz -O lgpio-0.2.2.0.tar.gz
+          gunzip lgpio-0.2.2.0.tar.gz
+          cd lgpio-0.2.2.0
+          python setup.py develop
+
           pip list
 
       - name: Mosquitto MQTT Broker in GitHub Actions
