--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^17.0.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "6.8.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^5.0.1",
     "react-showdown": "^2.3.1",
     "victory": "^35.11.4"
   },
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "rm -rf ../pioreactorui/static rm ../pioreactorui/precache-manifest* && cp -R build/* ../pioreactorui"
+    "postbuild": "rm -rf ../pioreactorui/static rm ../pioreactorui/precache-manifest* && cp -R build/* ../pioreactorui && mkdir -p ../pioreactorui/static/exports/ && touch ../pioreactorui/static/exports/.gitignore"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "css-loader": "^5.0.1",
     "prettier": "2.1.2",
     "style-loader": "^2.0.0"
