new mqtt config

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -111,6 +111,13 @@ send_errors_to_Pioreactor=1
 send_od_statistics_to_Pioreactor=1
 
 
+[mqtt]
+username=pioreactor
+password=raspberry
+broker_address=localhost
+broker_ws_port=9001
+broker_port=1883
+ws_protocol=ws
 
 [growth_rate_kalman]
 acc_std=0.0008
