--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "codeflask": "^1.4.1",
     "material-ui-confirm": "^3.0.5",
     "moment": "^2.29.1",
-    "paho-mqtt": "^1.1.0",
+    "mqtt": "^5.3.5",
     "react": "^17.0.0",
     "react-bootstrap": "^1.3.0",
     "react-codeflask": "0.0.5",
