new approach to outliers

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -118,7 +118,7 @@ broker_address=localhost
 broker_ws_port=9001
 broker_port=1883
 ws_protocol=ws
-tls=0
+use_tls=0
 
 [growth_rate_kalman]
 acc_std=0.0008
@@ -133,3 +133,11 @@ waste_removal_multiplier=2
 max_volume_to_warn=17.0
 max_volume_to_stop=18.0
 max_subdose=0.75
+
+[growth_rate_calculating.config]
+# these next two parameters control the length and magnitude
+# of the variance shift that our Kalman filter performs after a dosing event
+ekf_variance_shift_post_dosing_minutes=0.40
+ekf_variance_shift_post_dosing_factor=2500
+ekf_outlier_std_threshold=4.5
+samples_for_od_statistics=35
