--- a/config.dev.ini
+++ b/config.dev.ini
@@ -1,11 +1,12 @@
 [PWM]
-# map the externals to the PWM
-# hardware PWM are available on channels 1 & 3.
+# map the PWM channels to externals.
+# hardware PWM are available on channels 2 & 4.
 1=stirring
-3=media
-2=waste
-4=alt_media
+2=media
+3=alt_media
+4=waste
 5=heating
+
 
 [leds]
 A=IR
@@ -132,7 +133,7 @@ pause_between_subdoses_seconds=5
 waste_removal_multiplier=2
 max_volume_to_warn=17.0
 max_volume_to_stop=18.0
-max_subdose=0.75
+max_subdose=1.0
 
 [growth_rate_calculating.config]
 # these next two parameters control the length and magnitude
