--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
           python-version: 3.11
       - name: 🏗 Install build dependencies
         run: |
-          python -m pip install wheel build --user
+          python -m pip install -U wheel build setuptools --user
       - name: 🔨 Build a binary wheel and a source tarball
         run: |
           python -m build --wheel
