--- a/config.dev.ini
+++ b/config.dev.ini
@@ -142,3 +142,5 @@ ekf_variance_shift_post_dosing_minutes=0.40
 ekf_variance_shift_post_dosing_factor=2500
 ekf_outlier_std_threshold=3.0
 samples_for_od_statistics=35
+
+[pioreactor]
