--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,7 +59,7 @@ repos:
 
 
 -   repo: https://github.com/sqlfluff/sqlfluff
-    rev: stable_version
+    rev: 3.0.4
     hooks:
       - id: sqlfluff-lint
         args: [--dialect, "sqlite"]
