--- a/config.dev.ini
+++ b/config.dev.ini
@@ -144,5 +144,5 @@ ekf_outlier_std_threshold=3.0
 samples_for_od_statistics=35
 
 [pioreactor]
-bioreactor=pioreactor_20ml
+model=pioreactor_20ml
 version=1.0
