--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "proxy": "http://localhost:4999",
   "dependencies": {
-    "@emeraldpay/hashicon-react": "^0.5.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emeraldpay/hashicon-react": "^0.5.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^4.4.5",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.58",
-    "@mui/material": "^5.6.3",
-    "@mui/styles": "^5.6.2",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.16",
+    "@mui/styles": "^5.15.16",
+    "@mui/system": "^5.15.15",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -20,15 +21,15 @@
     "material-ui-confirm": "^3.0.5",
     "moment": "^2.29.1",
     "mqtt": "^5.3.5",
-    "react": "^17.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^1.3.0",
     "react-codeflask": "0.0.5",
-    "react-dom": "^17.0.0",
+    "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
-    "react-router-dom": "6.8.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-showdown": "^2.3.1",
-    "victory": "^35.11.4"
+    "victory": "^37.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
