--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "material-ui-confirm": "^3.0.5",
     "moment": "^2.29.1",
     "mqtt": "^5.3.5",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-bootstrap": "^1.3.0",
-    "react-codeflask": "0.0.5",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-showdown": "^2.3.1",
+    "react-simple-code-editor": "^0.13.1",
     "victory": "^37.0.2"
   },
   "scripts": {
