tests pass if this is auto

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -53,7 +53,7 @@ samples_per_second=0.2
 
 pd_reference_ema=0.4
 
-ir_led_intensity=50
+ir_led_intensity=auto
 
 # use the most recent calibration file, if available
 use_calibration=1
