server error messages; try not using REF for this self-test

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -74,7 +74,7 @@ console_log_level=DEBUG
 
 [cluster.topology]
 leader_hostname=localhost
-leader_address=localhost:4999
+leader_address=localhost
 
 
 [cluster.inventory]
@@ -89,6 +89,10 @@ filtered_od_lookback_minutes=240
 raw_od_lookback_minutes=240
 log_display_count=65
 time_display_mode=hours
+
+[ui]
+port=4999
+proto=http
 
 
 [dosing_automation.pid_morbidostat]
