--- a/config.dev.ini
+++ b/config.dev.ini
@@ -1,10 +1,10 @@
 [PWM]
-# map the PWM channels to externals.
-# hardware PWM are available on channels 2 & 4.
+# map the externals to the PWM
+# hardware PWM are available on channels 1 & 3.
 1=stirring
-2=media
-3=alt_media
-4=waste
+2=waste
+3=media
+4=alt_media
 5=heating
 
 
