clear retained testing exp msg

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -95,6 +95,23 @@ port=4999
 proto=http
 
 
+[ui.overview.charts]
+# show/hide charts on the PioreactorUI dashboard
+# 1 is show, 0 is hide
+implied_growth_rate=1
+implied_daily_growth_rate=0
+fraction_of_volume_that_is_alternative_media=0
+normalized_optical_density=1
+raw_optical_density=1
+temperature=1
+
+[ui.overview.cards]
+# show/hide cards on the PioreactorUI dashboard
+# 1 is show, 0 is hide
+dosings=1
+event_logs=1
+
+
 [dosing_automation.pid_morbidostat]
 Kp=5
 Ki=0
