--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "codeflask": "^1.4.1",
+    "js-yaml": "^4.1.0",
     "material-ui-confirm": "^3.0.5",
     "moment": "^2.29.1",
     "mqtt": "^5.7.0",
