--- a/requirements/requirements_worker.txt
+++ b/requirements/requirements_worker.txt
@@ -1,5 +1,5 @@
 -r requirements.txt
-numpy==1.24.2
+Adafruit-Blinka==8.43.0
 adafruit-circuitpython-ads1x15==2.2.23
 DAC43608==0.2.7
 TMP1075==0.2.1
