--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,6 +6,7 @@ JSON-log-formatter==0.5.1
 colorlog==6.7.0
 msgspec==0.18.5
 diskcache==5.6.3
-wheel==0.41.2
 crudini==0.9.5
+iniparse==0.5
+six==1.16.0
 # lgpio; platform_machine!='armv7l' and platform_machine!='armv6l' # preinstalled on base image
