--- a/requirements/requirements_leader.txt
+++ b/requirements/requirements_leader.txt
@@ -1,7 +1,12 @@
 -r requirements.txt
-zeroconf==0.115.2
-flask==3.0.2
+blinker==1.8.2
+Flask==3.0.2
 flup6==1.1.1
-python-dotenv==1.0.1
 huey==2.5.0
-werkzeug==3.0.3
+ifaddr==0.2.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+python-dotenv==1.0.1
+Werkzeug==3.0.3
+zeroconf==0.115.2
