--- a/requirements/requirements_worker.txt
+++ b/requirements/requirements_worker.txt
@@ -1,7 +1,18 @@
 -r requirements.txt
 numpy==1.24.2
 adafruit-circuitpython-ads1x15==2.2.23
+adafruit-circuitpython-busdevice==5.2.9
+adafruit-circuitpython-connectionmanager==3.1.1
+adafruit-circuitpython-requests==4.1.3
+adafruit-circuitpython-typing==1.10.3
+Adafruit-PlatformDetect==3.71.0
+Adafruit-PureIO==1.1.11
 DAC43608==0.2.7
-TMP1075==0.2.1
-rpi-hardware-pwm==0.2.1
 plotext==5.2.8
+pyftdi==0.55.4
+pyserial==3.5
+pyusb==1.2.1
+rpi_hardware_pwm==0.2.1
+TMP1075==0.2.1
+typing_extensions==4.12.2
+wheel==0.41.2
