--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,4 +9,5 @@ diskcache==5.6.3
 crudini==0.9.5
 iniparse==0.5
 six==1.16.0
+wheel==0.41.2
 # lgpio; platform_machine!='armv7l' and platform_machine!='armv6l' # preinstalled on base image
