don't stall in monitor if network isn't found (that might be okay)

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -31,7 +31,7 @@ initial_volume_ml=14
 initial_alt_media_fraction=0.0
 
 
-[stirring]
+[stirring.config]
 target_rpm=500
 initial_duty_cycle=15
 pwm_hz=200
@@ -47,7 +47,7 @@ Kd=0.0
 1=REF
 2=90
 
-[od_config]
+[od_reading.config]
 # how many samples should the ADC publish per second?
 samples_per_second=0.2
 
