just make a single log file

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -66,6 +66,7 @@ database=pioreactor.sqlite
 
 [logging]
 log_file=./pioreactor.log
+ui_log_file=./pioreactor.log
 
 # See Python's logging module for possible values
 #TODO: move this to another section
