--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,13 +8,13 @@ jobs:
     name: 🔨 Build distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: 🏗 Set up Python 3.11
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: '3.11'
       - name: 🏗 Install build dependencies
         run: |
           python -m pip install -U wheel build setuptools --user
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m build --wheel
       - name: ⬆ Upload build result
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: dist
           path: dist
@@ -49,11 +49,11 @@ jobs:
     name: 🔨 Build dependencies and upload
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: 🏗 Set up Python 3.11
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v5
         with:
           python-version: 3.11
       - name: 🏗 Install dependencies
@@ -78,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     - name: Get Latest Release
       id: get-latest-release
       run: |
@@ -103,7 +103,7 @@ jobs:
     needs: [build, build-deps, fetch-pioreactorui-release]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Download release assets
         run: |
           curl -s https://api.github.com/repos/pioreactor/pioreactor/releases/tags/${{ github.event.release.tag_name }} | jq -r '.assets[].browser_download_url' > assets.txt
@@ -143,7 +143,7 @@ jobs:
     needs: build
     steps:
       - name: ⬇ Download build result
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist
@@ -161,7 +161,7 @@ jobs:
         run: |
           echo "PIOREACTOR_VERSION=$GITHUB_REF_NAME" >> $GITHUB_ENV
       - name: 🚀 Repository Dispatch
-        uses: peter-evans/repository-dispatch@v1
+        uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.REPODISPATCH_TOKEN }}
           repository: Pioreactor/CustoPizer
