--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     -   id: mixed-line-ending
     -   id: trailing-whitespace
     -   id: check-added-large-files
+        args: ['--maxkb=3000']
 
 
 -   repo: https://github.com/ambv/black
