--- a/config.dev.ini
+++ b/config.dev.ini
@@ -39,7 +39,7 @@ use_rpm=True
 duration_between_updates_seconds=23
 post_delay_duration=0.25
 pre_delay_duration=2.0
-enable_dodging_od=True
+enable_dodging_od=False
 
 
 [stirring.pid]
