adding an event so we can exit early if requested

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -39,7 +39,7 @@ use_rpm=True
 duration_between_updates_seconds=23
 post_delay_duration=0.25
 pre_delay_duration=2.0
-enable_dodging_od=True
+enable_dodging_od=False
 
 
 [stirring.pid]
@@ -54,7 +54,7 @@ Kd=0.0
 
 [od_reading.config]
 # how many samples should the ADC publish per second?
-samples_per_second=0.03
+samples_per_second=0.2
 
 pd_reference_ema=0.4
 
