--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "proxy": "http://localhost:4999",
   "dependencies": {
-    "@emeraldpay/hashicon-react": "^0.5.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^4.4.5",
@@ -15,10 +14,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "boring-avatars": "^1.11.2",
     "codeflask": "^1.4.1",
+    "dayjs": "^1.11.13",
     "js-yaml": "^4.1.0",
     "material-ui-confirm": "^3.0.5",
-    "dayjs": "^1.11.13",
     "mqtt": "^5.7.3",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
@@ -43,19 +43,19 @@
     "extends": "react-app"
   },
   "browserslist": {
-   "production": [
-     "> 0.5%",
-     "last 2 versions",
-     "Firefox ESR",
-     "not dead",
-     "safari >= 15.4",
-     "iOS >= 15.4"
-   ],
-   "development": [
-     "last 1 chrome version",
-     "last 1 firefox version",
-     "last 1 safari version"
-   ]
+    "production": [
+      "> 0.5%",
+      "last 2 versions",
+      "Firefox ESR",
+      "not dead",
+      "safari >= 15.4",
+      "iOS >= 15.4"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
