--- a/package.json
+++ b/package.json
@@ -40,7 +40,21 @@
     "postbuild": "rm -rf ../pioreactorui/static rm ../pioreactorui/precache-manifest* && cp -R build/* ../pioreactorui && mkdir -p ../pioreactorui/static/exports/ && touch ../pioreactorui/static/exports/.gitignore"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": ["unused-imports"],
+    "rules": {
+      "additional-rule": "warn",
+      "unused-imports/no-unused-imports": "error",
+      "unused-imports/no-unused-vars": [
+        "warn",
+        {
+          "vars": "all",
+          "varsIgnorePattern": "^_",
+          "args": "after-used",
+          "argsIgnorePattern": "^_"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
@@ -61,6 +75,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "css-loader": "^5.0.1",
     "prettier": "2.1.2",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-unused-imports": "^4.1.4"
   }
 }
