--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -43,7 +44,6 @@
     "extends": "react-app",
     "plugins": ["unused-imports"],
     "rules": {
-      "additional-rule": "warn",
       "unused-imports/no-unused-imports": "error",
       "unused-imports/no-unused-vars": [
         "warn",
