keep checking for mqtt job

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -68,8 +68,8 @@ smoothing_penalizer=700.0
 
 [storage]
 database=.pioreactor/storage/pioreactor.sqlite
-temporary_cache=/tmp/local_intermittent_pioreactor_metadata.sqlite
-persistent_cache=.pioreactor/storage/local_persistent_pioreactor_metadata.db
+temporary_cache=/tmp/pioreactor_cache/local_intermittent_pioreactor_metadata.sqlite
+persistent_cache=.pioreactor/storage/local_persistent_pioreactor_metadata.sqlite
 
 
 [logging]
