--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "extends": "react-app",
     "plugins": ["unused-imports"],
     "rules": {
-      "unused-imports/no-unused-imports": "error",
+      "unused-imports/no-unused-imports": "warn",
       "unused-imports/no-unused-vars": [
         "warn",
         {
