--- a/config.dev.ini
+++ b/config.dev.ini
@@ -67,7 +67,7 @@ use_calibration=1
 smoothing_penalizer=700.0
 
 [storage]
-database=.pioreactor/storage/pioreactor.sqlite
+database=/Users/camerondavidson-pilon/code/pioreactorui/pioreactor.sqlite
 temporary_cache=local_intermittent_pioreactor_metadata.sqlite
 persistent_cache=.pioreactor/storage/local_persistent_pioreactor_metadata.sqlite
 
