important improvements: publish filename to be pulled into the ui, don't run waste if in sleeping

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -68,7 +68,7 @@ smoothing_penalizer=700.0
 database=.pioreactor/storage/pioreactor.sqlite
 temporary_cache=/tmp/pioreactor_cache/local_intermittent_pioreactor_metadata.sqlite
 persistent_cache=.pioreactor/storage/local_persistent_pioreactor_metadata.sqlite
-
+experiment_profile_dir=.pioreactor/experiment_profiles
 
 [logging]
 log_file=./pioreactor.log
