--- a/config.dev.ini
+++ b/config.dev.ini
@@ -63,7 +63,7 @@ ir_led_intensity=70
 
 # apply a smoothing penalizer
 smoothing_penalizer=6.0
-
+ekf_outlier_std_threshold
 [storage]
 database=.pioreactor/storage/pioreactor.sqlite
 temporary_cache=/tmp/pioreactor_cache/local_intermittent_pioreactor_metadata.sqlite
@@ -151,7 +151,7 @@ use_tls=0
 
 [growth_rate_kalman]
 acc_std=0.0008
-obs_std=1.0
+obs_std=1.5
 od_std=0.005
 rate_std=0.1
 
