fix hardware ADC addresses in testing; fix tests

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -58,7 +58,7 @@ samples_per_second=0.2
 
 pd_reference_ema=0.4
 
-ir_led_intensity=70
+ir_led_intensity=auto
 
 
 # apply a smoothing penalizer
@@ -68,7 +68,6 @@ smoothing_penalizer=6.0
 database=.pioreactor/storage/pioreactor.sqlite
 temporary_cache=/tmp/pioreactor_cache/local_intermittent_pioreactor_metadata.sqlite
 persistent_cache=.pioreactor/storage/local_persistent_pioreactor_metadata.sqlite
-experiment_profile_dir=.pioreactor/experiment_profiles
 
 [logging]
 log_file=./pioreactor.log
