--- a/config.dev.ini
+++ b/config.dev.ini
@@ -38,8 +38,8 @@ pwm_hz=200
 use_rpm=True
 duration_between_updates_seconds=23
 post_delay_duration=0.25
-pre_delay_duration=2.0
-enable_dodging_od=False
+pre_delay_duration=1.0
+enable_dodging_od=1
 
 
 [stirring.pid]
@@ -54,7 +54,7 @@ Kd=0.0
 
 [od_reading.config]
 # how many samples should the ADC publish per second?
-samples_per_second=0.2
+samples_per_second=0.1
 
 pd_reference_ema=0.4
 
