--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^4.4.5",
-    "@mui/icons-material": "^6.1.0",
-    "@mui/lab": "^6.0.0-beta.9",
-    "@mui/material": "^6.1.4",
-    "@mui/system": "^6.1.4",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/lab": "^7.0.0-beta.11",
+    "@mui/material": "^7.0.2",
+    "@mui/system": "^7.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -42,7 +42,9 @@
   },
   "eslintConfig": {
     "extends": "react-app",
-    "plugins": ["unused-imports"],
+    "plugins": [
+      "unused-imports"
+    ],
     "rules": {
       "unused-imports/no-unused-imports": "warn",
       "unused-imports/no-unused-vars": [
@@ -74,9 +76,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "css-loader": "^5.0.1",
-    "prettier": "2.1.2",
-    "style-loader": "^2.0.0",
     "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-unused-imports": "^4.1.4"
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "prettier": "2.1.2",
+    "style-loader": "^2.0.0"
   }
 }
