demo this new stirring behaviour

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -38,8 +38,11 @@ pwm_hz=200
 use_rpm=True
 duration_between_updates_seconds=23
 post_delay_duration=0.25
-pre_delay_duration=2.0
-enable_dodging_od=false
+pre_delay_duration=0.25
+enable_dodging_od=true
+target_rpm_during_od_reading=400
+target_rpm_outside_od_reading=500
+
 
 
 [stirring.pid]
