hide configs from pio run semantics

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -32,7 +32,7 @@ initial_alt_media_fraction=0.0
 
 
 [stirring.config]
-target_rpm=500
+initial_target_rpm=500
 initial_duty_cycle=15
 pwm_hz=200
 use_rpm=True
