--- a/config.dev.ini
+++ b/config.dev.ini
@@ -45,6 +45,10 @@ target_rpm_outside_od_reading=500
 
 
 
+[turbidostat.config]
+signal_channel=2
+od_smoothing_ema=0.5
+
 [stirring.pid]
 Kp=10.0
 Ki=0.0
@@ -162,6 +166,7 @@ waste_removal_multiplier=2
 max_volume_to_warn=17.0
 max_volume_to_stop=18.0
 max_subdose=1.0
+experimental_detect_pump_malfunction=True
 
 [growth_rate_calculating.config]
 # these next two parameters control the length and magnitude
