adding support for pump malfunction detection

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -166,7 +166,8 @@ waste_removal_multiplier=2
 max_volume_to_warn=17.0
 max_volume_to_stop=18.0
 max_subdose=1.0
-experimental_detect_pump_malfunction=True
+experimental_pump_malfunction_tolerance=0.2
+experimental_detect_pump_malfunction=False
 
 [growth_rate_calculating.config]
 # these next two parameters control the length and magnitude
