more clear config errors

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -75,6 +75,7 @@ smoothing_penalizer=6.0
 database=.pioreactor/storage/pioreactor.sqlite
 temporary_cache=/tmp/pioreactor_cache/local_intermittent_pioreactor_metadata.sqlite
 persistent_cache=.pioreactor/storage/local_persistent_pioreactor_metadata.sqlite
+number_of_backup_replicates_to_workers=0
 
 [logging]
 log_file=./pioreactor.log
