fix some testes

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -62,6 +62,8 @@ Kd=0.0
 [od_reading.config]
 # how many samples should the ADC publish per second?
 samples_per_second=0.2
+turn_off_leds_during_reading=1
+
 
 pd_reference_ema=0.4
 
