--- a/config.dev.ini
+++ b/config.dev.ini
@@ -62,7 +62,7 @@ Kd=0.0
 [od_reading.config]
 # how many samples should the ADC publish per second?
 samples_per_second=0.2
-
+turn_off_leds_during_reading=1
 pd_reference_ema=0.4
 
 ir_led_intensity=auto
@@ -73,7 +73,7 @@ smoothing_penalizer=6.0
 
 [storage]
 database=.pioreactor/storage/pioreactor.sqlite
-temporary_cache=/tmp/pioreactor_cache/local_intermittent_pioreactor_metadata.sqlite
+temporary_cache=.pioreactor/storage/local_intermittent_pioreactor_metadata.sqlite
 persistent_cache=.pioreactor/storage/local_persistent_pioreactor_metadata.sqlite
 number_of_backup_replicates_to_workers=0
 
